--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -260,215 +260,322 @@ h2 {
 
 /* Gallery page */
 
-.icon {
-    margin: 0;
-    padding: 0;
-    width: 2rem !important;
-    font-size: 2rem;
+.cr-container {
+    width: 600px;
+    height: 650px;
+    position: relative;
+    margin: 0 auto;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.gallery-container {
-    max-width: 1300px;
+.cr-container label {
+    font-style: italic;
+    width: 150px;
+    height: 30px;
+    cursor: pointer;
+    color: #fff;
+    line-height: 32px;
+    font-size: 24px;
+    float: left;
+    position: relative;
+    margin-top: 660px;
+    z-index: 1000;
 }
 
-.slick-track {
-    width: 1300px !important;
+.cr-container label:before {
+    content: '';
+    width: 34px;
+    height: 34px;
+    background: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    left: 50%;
+    margin-left: -17px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 4px rgba(153, 255, 102, 0.6);
+    z-index: -1;
 }
 
-.slick-slide {
-    width: 320px !important;
+
+/* .cr-container label:after {
+    width: 1px;
+    height: 400px;
+    content: '';
+    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(255, 255, 255, 1)));
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background: linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0);
+    position: absolute;
+    bottom: -20px;
+    right: 0px;
+} */
+
+.cr-container label.cr-label-img-4:after {
+    width: 0px;
 }
 
-.slick-dots {
-    bottom: -80px;
+.cr-container input.cr-selector-img-1:checked~label.cr-label-img-1,
+.cr-container input.cr-selector-img-2:checked~label.cr-label-img-2,
+.cr-container input.cr-selector-img-3:checked~label.cr-label-img-3,
+.cr-container input.cr-selector-img-4:checked~label.cr-label-img-4 {
+    color: rgba(153, 255, 102, 0.9);
 }
 
-.gallery-slider figure {
+.cr-container input.cr-selector-img-1:checked~label.cr-label-img-1:before,
+.cr-container input.cr-selector-img-2:checked~label.cr-label-img-2:before,
+.cr-container input.cr-selector-img-3:checked~label.cr-label-img-3:before,
+.cr-container input.cr-selector-img-4:checked~label.cr-label-img-4:before {
+    background: #fff;
+    box-shadow: 0px 0px 0px 4px rgba(153, 255, 102, 0.6);
+}
+
+.cr-container input {
+    display: none;
+}
+
+.cr-bgimg {
+    width: 600px;
+    height: 650px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+}
+
+.cr-bgimg {
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.cr-bgimg div {
+    width: 25%;
+    height: 100%;
     position: relative;
     float: left;
     overflow: hidden;
-    margin: 0;
-    max-width: 300px;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: auto;
-    background: #3085a3;
-    text-align: center;
-    cursor: pointer;
+    background-repeat: no-repeat;
 }
 
-.gallery-slider figure img {
-    position: relative;
-    display: block;
-    min-height: 100%;
-    max-width: 100%;
-}
-
-.gallery-slider figure figcaption {
-    padding: 1em;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.gallery-slider figure figcaption::before,
-.gallery-slider figure figcaption::after {
-    pointer-events: none;
-}
-
-.gallery-slider figure figcaption,
-.gallery-slider figure figcaption>a {
+.cr-bgimg div span {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    top: 0px;
+    left: -150px;
+    z-index: 2;
+    text-indent: -9000px;
 }
 
+.cr-container input.cr-selector-img-1:checked~.cr-bgimg,
+.cr-bgimg div span:nth-child(1) {
+    background-image: url(../img/cr1.png);
+    background-size: cover;
+}
 
-/* Anchor will cover the whole item by default */
+.cr-container input.cr-selector-img-2:checked~.cr-bgimg,
+.cr-bgimg div span:nth-child(2) {
+    background-image: url(../img/cr2.png);
+    background-size: cover;
+}
 
+.cr-container input.cr-selector-img-3:checked~.cr-bgimg,
+.cr-bgimg div span:nth-child(3) {
+    background-image: url(../img/cr3.png);
+    background-size: cover;
+}
 
-/* For some effects it will show as a button */
+.cr-container input.cr-selector-img-4:checked~.cr-bgimg,
+.cr-bgimg div span:nth-child(4) {
+    background-image: url(../img/projectc.png);
+    background-size: cover;
+}
 
-.gallery-slider figure figcaption>a {
-    z-index: 1000;
-    text-indent: 200%;
-    white-space: nowrap;
-    font-size: 0;
+.cr-bgimg div:nth-child(1) span {
+    background-position: 0px 0px;
+}
+
+.cr-bgimg div:nth-child(2) span {
+    background-position: -150px 0px;
+}
+
+.cr-bgimg div:nth-child(3) span {
+    background-position: -300px 0px;
+}
+
+.cr-bgimg div:nth-child(4) span {
+    background-position: -450px 0px;
+}
+
+.cr-container input:checked~.cr-bgimg div span {
+    -webkit-animation: slideOut 0.6s ease-in-out;
+    -moz-animation: slideOut 0.6s ease-in-out;
+    -o-animation: slideOut 0.6s ease-in-out;
+    -ms-animation: slideOut 0.6s ease-in-out;
+    animation: slideOut 0.6s ease-in-out;
+}
+
+@-webkit-keyframes slideOut {
+    0% {
+        left: 0px;
+    }
+    100% {
+        left: 150px;
+    }
+}
+
+@-moz-keyframes slideOut {
+    0% {
+        left: 0px;
+    }
+    100% {
+        left: 150px;
+    }
+}
+
+@-o-keyframes slideOut {
+    0% {
+        left: 0px;
+    }
+    100% {
+        left: 150px;
+    }
+}
+
+@-ms-keyframes slideOut {
+    0% {
+        left: 0px;
+    }
+    100% {
+        left: 150px;
+    }
+}
+
+@keyframes slideOut {
+    0% {
+        left: 0px;
+    }
+    100% {
+        left: 150px;
+    }
+}
+
+.cr-container input.cr-selector-img-1:checked~.cr-bgimg div span:nth-child(1),
+.cr-container input.cr-selector-img-2:checked~.cr-bgimg div span:nth-child(2),
+.cr-container input.cr-selector-img-3:checked~.cr-bgimg div span:nth-child(3),
+.cr-container input.cr-selector-img-4:checked~.cr-bgimg div span:nth-child(4) {
+    -webkit-transition: left 0.5s ease-in-out;
+    -moz-transition: left 0.5s ease-in-out;
+    -o-transition: left 0.5s ease-in-out;
+    -ms-transition: left 0.5s ease-in-out;
+    transition: left 0.5s ease-in-out;
+    -webkit-animation: none;
+    -moz-animation: none;
+    -o-animation: none;
+    -ms-animation: none;
+    animation: none;
+    left: 0px;
+    z-index: 10;
+}
+
+.cr-titles h3 {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 60%;
+    left: -100%;
+    z-index: 10000;
     opacity: 0;
+    color: #000000 !important;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    -webkit-transition: opacity 0.8s ease-in-out;
+    -moz-transition: opacity 0.8s ease-in-out;
+    -o-transition: opacity 0.8s ease-in-out;
+    -ms-transition: opacity 0.8s ease-in-out;
+    transition: opacity 0.8s ease-in-out;
 }
 
-.gallery-slider figure h2 {
-    word-spacing: -0.15em;
-    font-weight: 300;
-    font-size: 28px;
+.cr-titles h3 a {
+    position: absolute;
+    z-index: 20000;
+    width: 100%;
+    text-align: center;
+    /* top: 70%;
+    left: -60%; */
+    color: #000000 !important;
+    background: rgba(153, 255, 102, 0.831);
+    border-radius: 10px;
 }
 
-.gallery-slider figure h2 span {
-    font-weight: 800;
-}
 
-.gallery-slider figure h2,
-.gallery-slider figure p {
+/* .cr-titles h3 span .icon {
     margin: 0;
+    padding: 0;
+    width: 4rem !important;
+    font-size: 4rem;
+    z-index: 2;
+    color: black !important;
+} */
+
+.cr-titles h3 span:nth-child(1) {
+    font-size: 70px;
+    display: block;
+    letter-spacing: 7px;
+    /* background: rgba(153, 255, 102, 0.713); */
+    z-index: 30;
 }
 
-.gallery-slider figure p {
-    letter-spacing: 1px;
-    font-size: 68.5%;
+.cr-titles h3 span:nth-child(2) {
+    letter-spacing: 0px;
+    display: block;
+    /* background: rgba(153, 255, 102, 0.713); */
+    font-size: 30px;
+    padding: 10px;
+    /* font-style: italic; */
+    font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
 }
 
-.gallery-section {
-    background-color: #99ccff;
-}
-
-.gallery-section .title {
-    padding-right: 13px;
-    margin-bottom: 80px;
-}
-
-
-/*---------------*/
-
-
-/***** Julia *****/
-
-
-/*---------------*/
-
-figure.effect-julia {
-    background: #2f3238;
-}
-
-figure.effect-julia img {
-    -webkit-transition: opacity 1s, -webkit-transform 1s;
-    transition: opacity 1s, transform 1s;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-figure.effect-julia figcaption {
-    display: flex;
-    align-items: center;
-}
-
-figure.effect-julia h2 {
-    position: relative;
-    padding: 0.5em 0;
-}
-
-figure.effect-julia p {
-    display: inline-block;
-    margin: 0 0 0.25em;
-    padding: 0.4em 1em;
-    background: rgba(255, 255, 255, 0.9);
-    color: #2f3238;
-    text-transform: none;
-    font-weight: 500;
-    font-size: 75%;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: translate3d(-360px, 0, 0);
-    transform: translate3d(-360px, 0, 0);
-}
-
-figure.effect-julia p:first-child {
-    -webkit-transition-delay: 0.15s;
-    transition-delay: 0.15s;
-}
-
-figure.effect-julia p:nth-of-type(2) {
-    -webkit-transition-delay: 0.1s;
-    transition-delay: 0.1s;
-}
-
-figure.effect-julia p:nth-of-type(3) {
-    -webkit-transition-delay: 0.05s;
-    transition-delay: 0.05s;
-}
-
-figure.effect-julia:hover p:first-child {
-    -webkit-transition-delay: 0s;
-    transition-delay: 0s;
-}
-
-figure.effect-julia:hover p:nth-of-type(2) {
-    -webkit-transition-delay: 0.05s;
-    transition-delay: 0.05s;
-}
-
-figure.effect-julia:hover p:nth-of-type(3) {
-    -webkit-transition-delay: 0.1s;
-    transition-delay: 0.1s;
-}
-
-figure.effect-julia:hover img {
-    opacity: 0.4;
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-    transform: scale3d(1.1, 1.1, 1);
-}
-
-figure.effect-julia:hover p {
+.cr-container input.cr-selector-img-1:checked~.cr-titles h3:nth-child(1),
+.cr-container input.cr-selector-img-2:checked~.cr-titles h3:nth-child(2),
+.cr-container input.cr-selector-img-3:checked~.cr-titles h3:nth-child(3),
+.cr-container input.cr-selector-img-4:checked~.cr-titles h3:nth-child(4) {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
 }
 
-.gallery-slider .slick-dots li.slick-active,
-.gallery-slider .slick-dots li:hover {
-    background-color: #3CCDFF;
-}
 
-.gallery-slider .slick-dots li {
-    background-color: #ffffff;
-    width: 20px;
-    height: 20px;
-    border-radius: 100%;
-    margin: 0 10px;
-    transition: all 0.3s ease;
+/* Media Query: Let's show the inputs on mobile sized browsers because they probably don't support the label trick: */
+
+@media screen and (max-width: 768px) {
+    .cr-container input {
+        display: inline;
+        width: 24%;
+        margin-top: 350px;
+        z-index: 1000;
+        position: relative;
+    }
+    .cr-container label {
+        display: none;
+    }
+    .cr-titles h3 span:nth-child(2) {
+        font-size: 20px;
+    }
+    .cr-titles h3 {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        top: -5%;
+        left: 0%;
+        z-index: 10000;
+        opacity: 0;
+        color: #000000 !important;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+        -webkit-transition: opacity 0.8s ease-in-out;
+        -moz-transition: opacity 0.8s ease-in-out;
+        -o-transition: opacity 0.8s ease-in-out;
+        -ms-transition: opacity 0.8s ease-in-out;
+        transition: opacity 0.8s ease-in-out;
+    }
 }
 
 
